--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,14 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
-    <p>Zadání</p>
+    <form th:action = "@{/login}" method = "post">
+        <div><label>Uživatelské jméno: </label><input type="text" name="username"/></div>
+        <div><label>Heslo: </label><input type="password" name="password"/></div>
+        <div><input type="submit" value="Přihlásit se"/></div>
+    </form>
+    <div th:if = "${param.error}">
+        Špatné heslo nebo uživatelské jméno.
+    </div>
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
