--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,16 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
-    <p>Zadání</p>
+    <h2>Zadání</h2>
+    <p>Úkolem projektu je vytvořit webovou aplikaci pro zjednodušení plánování skupinových událostí. Umožňuje vytvoření
+        události s různými časovými termíny a místy, poté si pozvaní uživatelé na událost vyberou preferované termíny a
+        místa pomocí formuláře. Svoji volbu uloží a autor události zvolí ideální termín a místo na základě volby všech
+        pozvaných uživatelů. Je možné vybrat pouze termíny, místa nebo obojí. Hlavním prvkem aplikace jsou tedy události,
+        které obsahují textový popis, libovolný počet termínů a míst (podle preferencí autora) a seznam přihlášených
+        uživatelů na konkrétní termíny a místa. Počet preferovaných termínů a míst není omezen. Upravovat událost (včetně
+        termínů a míst) může pouze její autor. Uživatel zadává do aplikace základní informace o sobě – jméno, příjmení,
+        telefon a email. Termíny jsou uvedeny jako datum a čas, u míst je uvedena adresa, název podniku nebo místa a
+        zeměpisné souřadnice.</p>
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
