Login users from User

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -14,6 +14,8 @@
     <tr th:each="user : ${users}">
         <td><span th:text="${user.id}"> ID </span></td>
         <td><span th:text="${user.username}"> Username </span></td>
+        <td><span th:text="${user.password}"> Password </span></td>
+        </br>
     </tr>
 <!-- End of PAGE CONTENT -->
 </div>
