--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -11,8 +11,14 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
+    <p>Registrace proběhla úspěšně.
     <p th:text="'ID: ' + ${user.id}" />
-    <p th:text="'Username: ' + ${user.username}" />
+    <p th:text="'Křestní jméno: ' + ${user.firstName}" />
+    <p th:text="'Příjmení: ' + ${user.lastName}" />
+    <p th:text="'Uživateslké jméno: ' + ${user.username}" />
+    <p th:text="'Heslo: ' + ${user.password}" />
+    <p th:text="'E-mail: ' + ${user.email}" />
+    <p th:text="'Telefon: ' + ${user.phone}" />
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
