--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -11,14 +11,12 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
-    <p>Registrace proběhla úspěšně.</p>
-    <p th:text="'ID: ' + ${user.id}" />
-    <p th:text="'Křestní jméno: ' + ${user.firstName}" />
-    <p th:text="'Příjmení: ' + ${user.lastName}" />
-    <p th:text="'Uživateslké jméno: ' + ${user.username}" />
-    <p th:text="'Heslo: ' + ${user.password}" />
-    <p th:text="'E-mail: ' + ${user.email}" />
-    <p th:text="'Telefon: ' + ${user.phone}" />
+    <tr th:each="event : ${events}">
+        <td><span th:text="${event.id}"> ID </span></td>
+        <td><span th:text="${event.name}"> Name </span></td>
+        <td><span th:text="${event.description}"> Description </span></td>
+        </br>
+    </tr>
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
