--- a/src/main/resources/templates/created-event.html
+++ b/src/main/resources/templates/created-event.html
@@ -11,14 +11,12 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
-    <p>Registrace proběhla úspěšně.</p>
-    <p th:text="'ID: ' + ${user.id}" />
-    <p th:text="'Křestní jméno: ' + ${user.firstName}" />
-    <p th:text="'Příjmení: ' + ${user.lastName}" />
-    <p th:text="'Uživateslké jméno: ' + ${user.username}" />
-    <p th:text="'Heslo: ' + ${user.password}" />
-    <p th:text="'E-mail: ' + ${user.email}" />
-    <p th:text="'Telefon: ' + ${user.phone}" />
+    <p>Vytvoření události proběhlo úspěšně.</p>
+    <p th:text="'ID: ' + ${event.id}" />
+    <p th:text="'Název: ' + ${event.name}" />
+    <p th:text="'Popis: ' + ${event.description}" />
+    <p>TO DO Přidat místa a termíny.</p>
+    <p>TO DO Pozvat uživatele.</p>
 <!-- End of PAGE CONTENT -->
 </div>
 <div th:replace="fragments.html :: footer"></div>
