--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,7 +22,7 @@
     </form>
     <div>Pole označená * jsou povinná.</div>
     <div th:if = "${param.error}">
-        err. // TODO
+        Vyplňte všechna pole správně.
     </div>
 <!-- End of PAGE CONTENT -->
 </div>
