--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -11,6 +11,7 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
+    <h2>Registrace.</h2>
     <p>Registrace proběhla úspěšně.</p>
     <p th:text="'ID: ' + ${user.id}" />
     <p th:text="'Křestní jméno: ' + ${user.firstName}" />
