--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -11,6 +11,7 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
+    <h2>Události.</h2>
     <table>
         <tr>
             <th>ID</th>
