--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,6 +11,7 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
+    <h2>Registrace.</h2>
     <form th:action = "@{/register}" th:object="${user}" method = "post">
         <div><label>Křestní jméno: </label><input type="text" th:field="*{firstName}"/></div>
         <div><label>Příjmení: </label><input type="text" th:field="*{lastName}"/></div>
