--- a/src/main/resources/templates/created-event.html
+++ b/src/main/resources/templates/created-event.html
@@ -11,7 +11,7 @@
 <div th:replace="fragments.html :: header"></div>
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
-    <h2>Vytvoření nové události..</h2>
+    <h2>Vytvoření nové události.</h2>
     <p>Vytvoření události proběhlo úspěšně.</p>
     <p th:text="'ID: ' + ${event.id}" />
     <p th:text="'Název: ' + ${event.name}" />
