--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -19,7 +19,7 @@
     </form>
     <div>Pole označená * jsou povinná.</div>
     <div th:if = "${param.error}">
-        err. // TODO
+        Vyplňte všechna pole správně.
     </div>
 <!-- End of PAGE CONTENT -->
 </div>
