--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -9,3 +9,5 @@ body {font-size:16px;}
 .sidebar {z-index:3;width:300px;font-weight:bold}
 .button-close-menu {width:100%;font-size:22px}
 label {display:inline-block;width:200px;height:40px}
+.fl {float:left;overflow:auto;padding-right:40px;}
+.fclear {clear:both;overflow:auto}
