--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,17 +9,17 @@
 <div th:fragment="header">
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding sidebar" id="mySidebar"><br>
-        <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft button-close-menu">Skrýt menu</a>
+        <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft button-close-menu">Skrýt menu.</a>
         <div class="w3-container">
-            <h3 class="w3-padding-64"><b><a href="/" class="text-decoration-none">Scheduler</a></b></h3>
+            <h3 class="w3-padding-64"><b><a href="/" class="text-decoration-none">Scheduler.</a></b></h3>
         </div>
         <div class="w3-bar-block">
-            <a href="/create-event" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser != null}">Vytvořit novou událost</a>
-            <a href="/events" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser != null}">Moje události</a>
-            <a href="/register" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser == null}">Registrace</a>
-            <a href="/welcome" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser == null}">Přihlášení</a>
+            <a href="/create-event" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser != null}">Vytvořit novou událost.</a>
+            <a href="/events" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser != null}">Moje události.</a>
+            <a href="/register" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser == null}">Registrace.</a>
+            <a href="/welcome" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" th:if="${#httpServletRequest.remoteUser == null}">Přihlášení.</a>
             <form th:action="@{/logout}" method="post" onclick="w3_close()" th:if="${#httpServletRequest.remoteUser != null}">
-                <input type="submit" class="w3-bar-item w3-button w3-hover-white" value="Odhlášení"/>
+                <input type="submit" class="w3-bar-item w3-button w3-hover-white" value="Odhlášení."/>
             </form>
         </div>
     </nav>
