Button style & Mapping annotation (get)

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,5 +1,6 @@
 body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
+.bold {font-weight:bold}
 .w3-half img {margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover {opacity:1}
 .text-decoration-none {text-decoration:none}
@@ -12,3 +13,5 @@ label {display:inline-block;width:200px;height:40px}
 .fl {float:left;overflow:auto;padding-right:40px;}
 .fclear {clear:both;overflow:auto;margin-bottom:40px;}
 input {width:380px;}
+input[type=submit] {width:auto;}
+.w3-btn,.w3-button {background-color:#f44336;color:white;}
