--- a/src/main/resources/templates/edit-event.html
+++ b/src/main/resources/templates/edit-event.html
@@ -19,7 +19,7 @@
         <input type="hidden" th:field="*{users}"/>
         <input type="hidden" th:field="*{dates}"/>
         <input type="hidden" th:field="*{places}"/>
-        <div><input type="submit" value="Upravit událost"/></div>
+        <div><input type="submit" value="Upravit událost" class="w3-btn"/></div>
     </form>
     <div>Pole označená * jsou povinná.</div>
     <div th:if = "${param.error}">
