--- a/src/main/resources/templates/add-place.html
+++ b/src/main/resources/templates/add-place.html
@@ -277,7 +277,7 @@
             <option th:each="longDir : ${T(com.project.scheduler.entity.LongitudeDirection).values()}"
                     th:value="${longDir}" th:text="${longDir.displayValue}"></option>
         </select></div>
-        <div><input type="submit" value="Přidat"/></div>
+        <div><input type="submit" value="Přidat" class="w3-btn"/></div>
     </form>
     <div>Pole označená * jsou povinná.</div>
     <div th:if = "${param.error}">
