--- a/src/main/resources/templates/edit-date.html
+++ b/src/main/resources/templates/edit-date.html
@@ -18,7 +18,7 @@
         <div><label>Konec: </label><input type="datetime-local" th:field="*{dateTo}"/></div>
         <input type="hidden" th:field="*{events}"/>
         <input type="hidden" th:field="*{users}"/>
-        <div><input type="submit" value="Upravit"/></div>
+        <div><input type="submit" value="Upravit" class="w3-btn"/></div>
     </form>
     <div>Pole označená * jsou povinná.</div>
     <div th:if = "${param.error}">
