--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -12,6 +12,7 @@
 <!-- PAGE CONTENT -->
 <div class="w3-main main-margin">
     <h2>Události.</h2>
+    <p th:if="${#lists.isEmpty(events)}">Nemáte žádnou událost. Vytvořte ji nebo se nechte na nějakou pozvat jiným uživatelem.</p>
     <div th:each="event : ${events}" class="fclear">
         <h3>
             <span th:text="${event.name}"></span>
